[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pyspark-challenge"
version = "0.1.0"
description = "PySpark training input pipeline"
requires-python = ">=3.9"
dependencies = [
    "pyspark>=3.3,<4",
    "pytest"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
